--- a/events.html
+++ b/events.html
@@ -13,6 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Crimson+Text&display=swap"
         rel="stylesheet" />
 
+    <link rel="stylesheet" href="css/style.css">
+
     <style>
         body {
             font-family: 'Crimson Text', serif;
@@ -37,10 +39,28 @@
         #event-detail {
             backdrop-filter: blur(10px);
         }
+
+        /* Smooth fade animation for event popup */
+        #event-detail.show {
+            animation: fadeIn 0.4s ease forwards;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: scale(0.98);
+            }
+
+            to {
+                opacity: 1;
+                transform: scale(1);
+            }
+        }
     </style>
 </head>
 
 <body class="text-white relative overflow-x-hidden min-h-screen flex flex-col">
+
     <!-- Background Video -->
     <video autoplay muted loop playsinline id="bg-video"
         class="absolute top-0 left-0 w-full h-full object-cover z-[-2]">
@@ -50,12 +70,11 @@
     <div class="video-overlay"></div>
 
     <!-- Navbar -->
-    <nav
-        class="glass navbar p-4 flex items-center justify-between sticky top-0 z-50 w-full backdrop-blur bg-black bg-opacity-30">
-        <div class="flex items-center logo">
+    <nav class="p-4 flex items-center justify-between sticky top-0 z-50 w-full backdrop-blur bg-black bg-opacity-30">
+        <div class="flex items-center">
             <img src="images/PSA_logo.png" alt="PSA Logo" class="h-10 w-auto mr-3" />
         </div>
-        <div class="text-xl sm:text-2xl font-bold text-center flex-1">
+        <div class="text-lg md:text-2xl font-bold text-center flex-1">
             🔭 PSA – Physics Students' Association
         </div>
         <button id="menu-btn" class="text-white text-3xl focus:outline-none z-50 hover:text-gray-300">&#9776;</button>
@@ -72,27 +91,28 @@
             <li><a href="achievements.html">Achievements</a></li>
             <li><a href="team.html">Team</a></li>
             <li><a href="bi-monthly.html">Dual monthly events</a></li>
-            <li><a href="colloquims.html">Friday Colloquiums</a></li>
+            <li><a href="colloquims.html">Friday Colloquims</a></li>
             <li><a href="games/games.html">Games</a></li>
         </ul>
     </div>
 
     <!-- Hero Section -->
-    <section class="text-center py-20 fade-in">
+    <section class="text-center py-20 px-4">
         <h1 class="text-4xl md:text-5xl font-bold text-purple-300">🌌 PSA Events</h1>
-        <p class="mt-4 text-lg md:text-xl text-gray-300 max-w-xl mx-auto">Explore our universe of activities, workshops,
-            and events.</p>
+        <p class="mt-4 text-lg md:text-xl text-gray-300 max-w-2xl mx-auto">
+            Explore our universe of activities, workshops, and events.
+        </p>
     </section>
 
     <!-- Upcoming Events -->
-    <section class="px-4 md:px-20 py-10 fade-slide">
-        <h2 class="text-3xl font-semibold text-teal-200 mb-6">📡 Upcoming Events</h2>
-        <div class="grid md:grid-cols-2 gap-6">
+    <section class="px-4 sm:px-10 md:px-20 py-10">
+        <h2 class="text-3xl font-semibold text-teal-200 mb-6 text-center md:text-left">📡 Upcoming Events</h2>
+
+        <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 justify-items-center">
 
             <!-- NOESIS 2025 Event Card -->
-<<<<<<< HEAD
             <div
-                class="bg-gradient-to-br from-indigo-900 via-purple-900 to-black bg-opacity-90 p-8 rounded-2xl border border-indigo-600 hover:border-indigo-300 hover:shadow-2xl transition-all duration-300 transform hover:scale-105 flex flex-col justify-between">
+                class="bg-gradient-to-br from-indigo-900 via-purple-900 to-black p-6 sm:p-8 rounded-2xl border border-indigo-600 hover:border-indigo-300 hover:shadow-2xl transition-all duration-300 transform hover:scale-105 flex flex-col justify-between w-full max-w-md">
                 <div>
                     <h3 class="text-2xl font-bold text-indigo-200 mb-2 text-center">NOESIS 2025</h3>
                     <p class="text-sm text-gray-400 mb-3 text-center">📅 November 26, 2025 | 🕘 9:00 AM – 2:30 PM</p>
@@ -102,50 +122,36 @@
                 </div>
                 <div class="text-center">
                     <button onclick="showEventDetails(
-            'NOESIS 2025',
-            `NOESIS is the flagship physics fest organized by the Physics Students’ Association.
-            A celebration of science, intellect, and curiosity — NOESIS brings together students
-            from across disciplines for exciting challenges, thought-provoking quizzes, and engaging discussions.
-            Join us in exploring the wonders of physics and innovation!`,
-            '📅 Date: November 26, 2025 | 🕘 9:00 AM – 2:30 PM | 📍 Venue: Auditorium Block, St. Joseph’s University',
-            'https://noesisregistration.vercel.app',
-            ['Open for all students', 'Registration mandatory', 'Bring your student ID card', 'No mobile devices during events']
-          )" class="inline-block px-6 py-2 bg-green-500 hover:bg-green-600 text-white rounded-lg font-semibold transition-all duration-300">
+              'NOESIS 2025',
+              `NOESIS is the flagship physics fest organized by the Physics Students’ Association.
+              A celebration of science, intellect, and curiosity — NOESIS brings together students
+              from across disciplines for exciting challenges, thought-provoking quizzes, and engaging discussions.
+              Join us in exploring the wonders of physics and innovation!`,
+              '📅 Date: November 26, 2025 | 🕘 9:00 AM – 2:30 PM | 📍 Venue: Auditorium Block, St. Joseph’s University',
+              'https://noesisregistration.vercel.app',
+              ['Open for all students', 'Registration mandatory', 'Bring your student ID card', 'No mobile devices during events']
+            )" class="inline-block px-6 py-2 bg-green-500 hover:bg-green-600 text-white rounded-lg font-semibold transition-all duration-300">
                         🔗 Click to Register
                     </button>
                 </div>
-=======
-            <div onclick="showEventDetails(
-        'NOESIS 2025',
-        `NOESIS is the flagship physics fest organized by the Physics Students’ Association. 
-        A celebration of science, intellect, and curiosity - NOESIS brings together students 
-        from across disciplines for exciting challenges, thought-provoking quizzes, and many more . 
-        Join us in exploring the wonders of physics!`,
-        'November 27, 2025',
-        'https://noesisregistration.vercel.app',
-        ['Open for all students', 'Registration mandatory', 'Bring your student ID card', 'No mobile devices during events']
-      )" class="cursor-pointer bg-gradient-to-br from-indigo-900 via-purple-900 to-black bg-opacity-90 p-8 rounded-2xl border border-indigo-600 hover:border-indigo-300 hover:shadow-2xl transition-all duration-300 transform hover:scale-105">
-                <h3 class="text-2xl font-bold text-indigo-200 mb-2 text-center">NOESIS 2025</h3>
-                <p class="text-sm text-gray-400 mb-2 text-center">📅 Novemeber 27, 2025</p>
-                <p class="text-gray-100 text-center text-lg">Click to explore the Physics Fest of the Year!</p>
->>>>>>> 55593b7fce0b4fe504aa234a20cbb66714dd2c50
             </div>
+
         </div>
     </section>
 
     <!-- Hidden Event Detail Section -->
-    <div id="event-detail" class="hidden fixed inset-0 bg-black bg-opacity-80 text-white z-50 p-8 overflow-auto">
+    <div id="event-detail" class="hidden fixed inset-0 bg-black bg-opacity-80 text-white z-50 p-6 sm:p-8 overflow-auto">
         <button onclick="closeEvent()" class="absolute top-4 right-6 text-white text-3xl hover:text-red-400">×</button>
 
-        <div class="max-w-5xl mx-auto mt-8">
-            <h2 id="event-title" class="text-4xl font-bold text-center mb-2 text-purple-300"></h2>
+        <div class="max-w-5xl mx-auto mt-10">
+            <h2 id="event-title" class="text-3xl md:text-4xl font-bold text-center mb-2 text-purple-300"></h2>
             <p id="event-date" class="text-center text-gray-400 mb-8"></p>
 
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Left Column -->
                 <div class="col-span-2">
                     <h3 class="text-xl font-semibold mb-2 text-blue-300">📘 Description</h3>
-                    <p id="event-description" class="mb-6 leading-relaxed"></p>
+                    <p id="event-description" class="mb-6 leading-relaxed text-justify"></p>
 
                     <div id="event-rules-container">
                         <h3 class="text-xl font-semibold text-yellow-300 mb-2">📋 Rules & Guidelines</h3>
@@ -166,7 +172,7 @@
     </div>
 
     <!-- Call to Action -->
-    <section class="text-center py-16 fade-slide">
+    <section class="text-center py-16 px-4">
         <h2 class="text-2xl md:text-3xl text-white mb-4">Want to suggest an event or comment on PSA?</h2>
         <a href="https://forms.gle/SS3dR5LnyVU2tL7W6" target="_blank"
             class="inline-block px-6 py-3 bg-purple-600 text-white rounded-full hover:bg-purple-700 transition mt-4">
@@ -179,7 +185,6 @@
         © 2025 PSA – Physics Students' Association | St. Joseph’s University
     </footer>
 
-    <!-- Script -->
     <script src="js/script.js"></script>
     <script src="js/events.js"></script>
 </body>
